# FlowRank

./: .env.example  .gitignore  README.md  README_MIGRATION_OAUTH.md  compose.dev.yaml  compose.prod.yaml  package.json  pyproject.toml
.github/workflows/: deploy-prod.yml
back/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
back/app/: __init__.py
back/dao/: __init__.py  account.py  connection.py  label.py  link.py  mail.py  models.py
back/dao/schemas/: account.py  dashboard.py  link.py  mail.py  register.py
back/router/: account.py  dashboard.py  link.py  mail.py  mails.py
back/scripts/: _db.py  getMails.py  get_mails.py  load_labeled_emails.py  seed_dev.py  sort_mails.py
back/sql/: account.sql
back/utils/: __init__.py  color.py
back/utils/error/: __init__.py  schema.py
back/utils/google/: auth.py  format.py  gmail.py  oauth.py
back/utils/routers/: account.py
back/workflows/mail_fetch/: __init__.py  fetch.py  gmail.py
back/workflows/mail_sorting/: __init__.py  base.py  hf_text_classifier.py  loader.py  schemas.py
front/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
front/src/: App.tsx  index.css
front/src/auth/: postLoginRoute.ts
front/src/components/Accueil/: Accueil.tsx
front/src/components/AuthCallback/: AuthCallback.tsx
front/src/components/CompteCreation/: CreationCompte.tsx
front/src/components/Confirm/: confirm.tsx
front/src/components/CreateAccount/: CreateAccount.tsx
front/src/components/Dashboard/: Dashboard.tsx  dashboard.types.ts
front/src/components/FlowRankMark/: FlowRankMark.tsx
front/src/components/Header/: HeaderAccueil.tsx
front/src/components/Landing/: Landing.tsx
front/src/components/LinkAccount/: LinkAccount.tsx
front/src/components/Login/: Login.tsx
front/src/components/PasswordField/: PasswordField.tsx
front/src/constants/: api.ts
sql/: account.sql
